<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forginpassword_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="@dimen/dimen_70px"
        android:background="@color/white"
        android:gravity="right"
        android:minWidth="?attr/actionBarSize"
        app:titleTextAppearance="@style/Toolbar.TitleText">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/binding_mobile_phone_number"
            android:textColor="@color/layout_title"
            android:textSize="@dimen/dimen_60px" />
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_180px"
        android:background="@color/white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/phone_edit_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_180px"
            android:background="@null"
            android:drawableLeft="@mipmap/ic_phone_username"
            android:drawablePadding="@dimen/dimen_13px"
            android:hint="@string/prompt_phone"
            android:inputType="number"
            android:maxLength="11"
            android:paddingLeft="@dimen/dimen_13px"
            android:singleLine="true"
            android:textColor="@color/textGrayDeep"
            android:textSize="@dimen/dimen_54px" />
        />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_180px">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/send_code_user_pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_rect_border"
            android:drawableLeft="@mipmap/ic_send_code_user_pass"
            android:drawablePadding="@dimen/dimen_13px"
            android:hint="@string/input_send_code_password"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="6"
            android:maxLines="1"
            android:paddingLeft="@dimen/dimen_13px"
            android:paddingRight="@dimen/dimen_23px"
            android:textColor="@color/textGrayDeep"
            android:textSize="@dimen/dimen_54px" />


        <TextView
            android:id="@+id/send_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dimen_22px"
            android:clickable="true"
            android:gravity="center"
            android:paddingLeft="@dimen/dimen_8px"
            android:text="@string/send_code"
            android:textColor="@drawable/selector_login_text"
            android:textSize="@dimen/dimen_54px" />
    </RelativeLayout>

    <TextView
        android:id="@+id/complete_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_150px"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/dimen_40px"
        android:layout_marginRight="@dimen/dimen_40px"
        android:layout_marginTop="@dimen/dimen_40px"
        android:background="@drawable/login_btn_bg"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/nextstep"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_60px" />

</LinearLayout>

