<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_40px">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/please_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/can_around_slide"
                android:text="@string/please_select"
                android:textColor="@color/red_bg"
                android:textSize="@dimen/dimen_54px" />

            <TextView
                android:id="@+id/can_around_slide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/can_around_slide"
                android:textColor="@color/textGrayLight"
                android:textSize="@dimen/dimen_40px" />
        </LinearLayout>

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dimen_60px"
            android:clickable="true"
            android:padding="@dimen/dimen_40px"
            android:src="@drawable/selector_set_meal_selector" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_48px"
        android:text="@string/set_meal_selector"
        android:textColor="@color/textGrayDeep" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/dimen_40px">


    </LinearLayout>

</LinearLayout>