<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_date_nickname_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_person_bg"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="@dimen/dimen_80px"
        android:background="@color/white"
        android:gravity="right"
        android:minWidth="?attr/actionBarSize"
        app:titleTextAppearance="@style/Toolbar.TitleText">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/personal_data_nicename"
            android:textColor="@color/color_423A59"
            android:textSize="@dimen/dimen_60px" />

        <TextView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="@dimen/dimen_30px"
            android:background="@drawable/fragment_person_mine_dinner_select"
            android:clickable="true"
            android:cursorVisible="false"
            android:focusable="true"
            android:padding="@dimen/dimen_30px"
            android:text="@string/save"
            android:textColor="@color/color_423A59"
            android:textSize="@dimen/dimen_60px" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <com.qbgg.cenglaicengqu.main.widget.ClearEditText
        android:id="@+id/date_nickname_edittext"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_150px"
        android:layout_marginTop="@dimen/dimen_40px"
        android:background="@color/white"
        android:padding="@dimen/dimen_20px"
        android:text="王大锤"
        android:textColor="@color/color_5C5C5C"
        android:textSize="@dimen/dimen_50px">

    </com.qbgg.cenglaicengqu.main.widget.ClearEditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_20px"
        android:layout_marginTop="@dimen/dimen_20px"
        android:text="@string/date_nickname_tips"
        android:textColor="@color/color_ACACAD"
        android:textSize="@dimen/dimen_40px" />
</LinearLayout>
